--- a/HTML/atributo.html
+++ b/HTML/atributo.html
@@ -8,9 +8,7 @@
 
 Detalles de la prenda
 Clásico alto en la cintura, con apariencia de brasileña.
-Control suave en abdomen medio y bajo.
-Bandas elásticas en cintura y piernas con excelente ajuste.
-Costuras ultraplanas que lo hacen imperceptible bajo la ropa.
+Control suave en abdomen medio y ba.
 Costura trasera con un leve recogido que ayuda a realzar los glúteos.
 Refuerzo inferior 100% en algodón para mayor comodidad.
 Composición: 79% poliamida, 21% elastano. </p>
