--- a/HTML/atributosde inc.html
+++ b/HTML/atributosde inc.html
@@ -13,9 +13,7 @@ es texto nuevo insertado.</ins></p>
 
 <p><b>Note:</b> Los atributos cite y
 datetime, citación y tiempo de inserción
-respectivamente, no aparecen de ninguna
-forma especial en la mayoría de los
-navegadores.</p>
+respectivamente, </p>
 
 </body>
 
